style: Update Route FavIcons

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/lobby.css">
     <link rel="stylesheet" href="/css/draw.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body id="body" >
     <!-- Lobby Container -->
