--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,7 @@
                 <ul>
                     <li><a href="/">HOME</a></li>
                     <li><a href="/account">ACCOUNT</a></li>
+                    <li><a href="/game">GAME</a></li>
                 </ul>
             </nav>
         </div>
