--- a/src/views/account.html
+++ b/src/views/account.html
@@ -11,6 +11,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/account.css">
     <link rel="stylesheet" href="/css/main.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
     <!-- Header -->
@@ -20,6 +22,7 @@
                 <ul>
                     <li><a href="/">HOME</a></li>
                     <li><a href="/account">ACCOUNT</a></li>
+                    <li><a href="/game">GAME</a></li>
                 </ul>
             </nav>
         </div>
