feat: Add timer for guessing

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -201,6 +201,12 @@
             <!-- Prompt submit button -->
             <button id="guess-button" class="button lobby-button">Submit</button>
         </form>
+        <div class = 'guess-timer-container'>
+            <div>
+                <p class = 'lobby-container-text guess-time-container' id = 'guessTimerLabel'> Time Remaining:</p>
+                <p class = 'room-code-container start-time-container' id = "guessCountdownTimer"></p>
+            </div>
+        </div>
     </div>  
 
    <!-- End game screen -->
