fix: Login End-To-End Test That Fails

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -73,23 +73,23 @@
         </div>
         <!-- Link to admin form -->
         <div class="login-signup">
-            <span class="text">Are you an administrator? <a href="#" class="text admin-link">Login as an Administator</a></span>
+            <span class="text">Are you an administrator? <a href="#" class="text admin-link">Login as an Administrator</a></span>
         </div>
     </div>
 
     <!-- Admin Login Container -->
     <div class="login-container admin-container" style="display: none;">
-        <span class="title">Administator Login</span> 
+        <span class="title">Administrator Login</span> 
         <!-- Login form fields -->
         <form>
             <!-- Username input field -->
             <div class="input-field">
-                <input type="text" id="adminLoginEmail" name="loginEmail" placeholder="Enter your administator email" required>
+                <input type="text" id="adminLoginEmail" name="loginEmail" placeholder="Enter your administrator email" required>
                 <i class="uil uil-user icon"></i>
             </div>
             <!-- Password input field -->
             <div class="input-field">
-                <input type="password" id="adminLoginPassword" name="loginPassword" class="password" placeholder="Enter your password" required>
+                <input type="password" id="adminLoginPassword" name="loginPassword" class="password" placeholder="Enter your administrator password" required>
                 <i class="uil uil-lock icon"></i>
                 <!-- Icon to show/hide password -->
                 <i class="uil uil-eye-slash showHidePassword"></i>
