--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -119,6 +119,8 @@
     font-size: 18px;
     font-weight: bold;
     color: #003167; /* Dark text color */
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .end-title {
@@ -151,14 +153,14 @@
     width: 100%;
 }
 
-.right-column {
+.left-column {
     display: flex;
     height: 100%;
     width: 60%; /* Set width of left column */
     padding: 15px;
 }
 
-.left-column {
+.right-column {
     display: flex;
     text-align: left;
     align-items: flex-start;
