--- a/src/views/game.html
+++ b/src/views/game.html
@@ -208,17 +208,18 @@
    <!-- End game screen -->
    <div id='endGameScreen' class='container end-container' style="display: none;">
         <div class="left-column">
+            <div id="endGameResults" class="results-container">
+                <div class="prompt-container-end" id="initialPrompt"></div>
+                <div class="drawing-container-end" id="initialDrawing"></div>
+                <div class="prompt-container-end" id="finalPrompt"></div>
+                <div class="drawing-container-end" id="finalDrawing"></div>
+            </div>
+        </div>
+        
+        <div class="right-column">
             <p class='title-drawing end-title'>Game Over!</p>
                 <button id="backToLobbySessionButton" class="button lobby-button end-button">Return to Lobby</button>
                 <button id="backToLobbyScreenButton" class="button lobby-button end-button">End Game Session</button>
-        </div>
-
-        <div class="right-column">
-            <div id="endGameResults" class="results-container">
-                <div class="prompt-container-end" id="initialPrompt"></div>
-                <div class="drawing-container-end"></div>
-                <div class="prompt-container-end" id="finalPrompt"></div>
-            </div>
         </div>
     </div>
 
