feat: Add Login Verification on Login Form

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -81,7 +81,7 @@
     <div class="login-container admin-container" style="display: none;">
         <span class="title">Administrator Login</span> 
         <!-- Login form fields -->
-        <form>
+        <form action="api/admin/login" method="post">
             <!-- Username input field -->
             <div class="input-field">
                 <input type="text" id="adminLoginEmail" name="loginEmail" placeholder="Enter your administrator email" required>
