refactor: Adjust Show/Hide Password to Operate Idenpendantly for each Field

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -122,6 +122,8 @@
             <div class="input-field">
                 <input type="password" id="signupPassword" name="signupPassword" class="password" placeholder="Create a password" required>
                 <i class="uil uil-lock icon"></i>
+                <!-- Icon to show/hide password -->
+                <i class="uil uil-eye-slash showHidePassword"></i>
             </div>
             <!-- Confirm password input field -->
             <div class="input-field">
