--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -169,6 +169,6 @@
     flex-direction: column;
     padding: 15px;
     padding-right: 30px;
-    border-right: 2px solid #003167;
+    border-left: 2px solid #003167;
 }
 
