feat: Add a Leave Lobby Button

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -219,7 +219,7 @@
         <div class="right-column">
             <p class='title-drawing end-title'>Game Over!</p>
                 <button id="backToLobbySessionButton" class="button lobby-button end-button">Return to Lobby</button>
-                <button id="backToLobbyScreenButton" class="button lobby-button end-button">End Game Session</button>
+                <button id="backToLobbyScreenButton" class="button lobby-button end-button red-button">End Game Session</button>
         </div>
     </div>
 
