--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -167,8 +167,11 @@
     width: 40%; /* Set width of right column */
     height: 100%;
     flex-direction: column;
-    padding: 15px;
-    padding-right: 30px;
+    padding: 30px;
     border-left: 2px solid #003167;
+}
+
+.start-time-text {
+    margin-top: 10px;
 }
 
