--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,6 +182,18 @@ body {
     width: 100%;
 }
 
+.red-button {
+    background-color: #ff661a;
+    border: 2px solid #ff0000;
+    color: #fff;
+    text-align: center;
+}
+
+.red-button:hover {
+    background-color: #ff0000;
+    border: 2px solid #ff3333;
+}
+
 .username-button {
     background-color: #eab676;
     border: 2px solid #e28743;
