--- a/src/views/admin.html
+++ b/src/views/admin.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <span class="title">Administator Dashboard</span>
+        <span class="title">Administrator Dashboard</span>
     </div>
 </body>
 </html>
