feat: Add user logs viewing

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -104,6 +104,31 @@
     width: 100%;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 100%;
+    padding: 20px;
+}
+
+.log-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.logs-content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    padding: 20px;
+}
+
 /* Slide out to the left animation */
 @keyframes slideOutToLeft {
     0% {
