--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -119,6 +119,8 @@
     font-size: 18px;
     font-weight: bold;
     color: #003167; /* Dark text color */
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .end-title {
@@ -151,22 +153,49 @@
     width: 100%;
 }
 
-.right-column {
+.left-column {
     display: flex;
     height: 100%;
     width: 60%; /* Set width of left column */
     padding: 15px;
 }
 
-.left-column {
+.right-column {
     display: flex;
     text-align: left;
     align-items: flex-start;
     width: 40%; /* Set width of right column */
     height: 100%;
     flex-direction: column;
+    padding: 30px;
+    border-left: 2px solid #003167;
+}
+
+.start-time-text {
+    margin-top: 10px;
+}
+
+.left-column-admin {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    height: 100%;
+    max-height: 60vh;
+    width: 60%; /* Set width of left column */
     padding: 15px;
-    padding-right: 30px;
-    border-right: 2px solid #003167;
+    scroll-behavior: smooth;
+    overflow-y: auto;
+}
+
+.right-column-admin {
+    display: flex;
+    text-align: left;
+    align-items: flex-start;
+    width: 40%; /* Set width of right column */
+    height: 100%;
+    flex-direction: column;
+    padding: 30px;
+    border-left: 2px solid #003167;
 }
 
