--- a/src/views/account.html
+++ b/src/views/account.html
@@ -11,6 +11,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/account.css">
     <link rel="stylesheet" href="/css/main.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
     <!-- Header -->
@@ -20,6 +22,7 @@
                 <ul>
                     <li><a href="/">HOME</a></li>
                     <li><a href="/account">ACCOUNT</a></li>
+                    <li><a href="/game">GAME</a></li>
                 </ul>
             </nav>
         </div>
@@ -81,7 +84,7 @@
     <div class="login-container admin-container" style="display: none;">
         <span class="title">Administrator Login</span> 
         <!-- Login form fields -->
-        <form>
+        <form action="api/admin/login" method="post">
             <!-- Username input field -->
             <div class="input-field">
                 <input type="text" id="adminLoginEmail" name="loginEmail" placeholder="Enter your administrator email" required>
@@ -122,6 +125,8 @@
             <div class="input-field">
                 <input type="password" id="signupPassword" name="signupPassword" class="password" placeholder="Create a password" required>
                 <i class="uil uil-lock icon"></i>
+                <!-- Icon to show/hide password -->
+                <i class="uil uil-eye-slash showHidePassword"></i>
             </div>
             <!-- Confirm password input field -->
             <div class="input-field">
