--- a/src/views/admin.html
+++ b/src/views/admin.html
@@ -37,7 +37,7 @@
             <span class="title">Administrator Dashboard</span>
             <form action="api/getLogs" method="post" class="admin-form">
                 <!-- Number of logs input field -->
-                <div class="input-box">
+                <div class="input-box-admin">
                     <i class="uil uil-keyboard icon"></i>
                     <input type="text" id="logCount" name="logCount" placeholder="Enter the number of logs you'd like to query." required>
                 </div>
